2008-12-05  Andreas Schwab  <schwab@suse.de>

	* dired.el (dired-font-lock-keywords): Fix last change.

2008-12-05  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-diag.el (mule-diag): Display the window
	system version in a less laconic way.

2008-12-04  Juanma Barranquero  <lekktu@gmail.com>

	* ibuffer.el (ibuffer-sort-bufferlist): Require ibuf-ext
	if the sorting functions are not loaded.  (Bug#1432)

2008-12-04  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-read-command): Extracted from
	compile.
	(compile): Use it.
	(recompile): Accept an optional argument to enable editing the
	command line.

2008-12-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Write a message, when loading Tramp.

	* net/tramp-cache.el (tramp-dump-connection-properties): Polish
	the check, whether to dump the data.

2008-12-04  Lute Kamstra  <lute@gnu.org>

	* vc-cvs.el (vc-cvs-could-register): Don't use file-directory-p to
	check if the file "CVS/Entries" exists.

2008-12-04  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-diag.el (list-character-sets): Doc fix.
	(list-character-sets-2): Fix info in header.  Simplify.
	(print-coding-system): Simplify.
	(list-input-methods-1): Simplify.
	(mule-diag): Display current font/fontset for all window systems,
	not just X.  Simplify.

2008-12-04  Glenn Morris  <rgm@gnu.org>

	* vc-cvs.el (vc-cvs-register-switches): Doc fix.  Add t as option.
	(vc-cvs-register): Doc fix.
	* vc-mcvs.el (vc-mcvs-register-switches): Doc fix.  Add t as option.
	(vc-mcvs-register): Doc fix.
	* vc-rcs.el (vc-rcs-register-switches): Doc fix.  Add t as option.
	(vc-rcs-register): Doc fix.
	* vc-sccs.el (vc-sccs-register-switches): Doc fix.  Add t as option.
	(vc-sccs-register): Doc fix.
	* vc-svn.el (vc-svn-register-switches): Doc fix.  Add t as option.
	(vc-svn-register): Doc fix.

	* files.el (toggle-read-only): Doc fix.

2008-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>
